# SIMPAC-2023-33

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md
examples/: birefringence.py  get_binary_field_data.py  get_field_data.py
examples/first_steps/: 1d_gaussian.ipynb  1d_plane.ipynb  2d_gaussian.ipynb  2d_plane.ipynb  3d_gaussian.ipynb  3d_plane.ipynb
examples/harmonic_generation/: 1d.ipynb  2d.ipynb  3d.ipynb
src/: CMakeLists.txt  DerivationStencils.cpp  DerivationStencils.h  ICSetters.cpp  ICSetters.h  LatticePatch.cpp  LatticePatch.h  Makefile_skel  Outputters.cpp  Outputters.h  SimulationClass.cpp  SimulationClass.h  SimulationFunctions.cpp  SimulationFunctions.h  TimeEvolutionFunctions.cpp  TimeEvolutionFunctions.h  main.cpp  run_1D_ex.sh  run_1D_ex_win.ps1  run_2D_ex.sh  run_3D_ex.sh
